language/move-lang/tests/move_check/expansion/global_access_pack.exp
error: 

   ┌── tests/move_check/expansion/global_access_pack.move:3:13 ───
   │
 3 │         ::S { }
   │             ^ Unexpected token: '{'
   ·
 3 │         ::S { }
   │             - Expected: '('
   │

